Fix z-index on header

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,7 +3,7 @@
   padding: 1.5rem 0;
   color: #fff;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 
   &__container {
     @extend .align-extend;
