--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,7 +3,7 @@
   padding: 1.1rem 0;
   width: 100%;
   position: relative;
-  z-index: 1;
+  z-index: 2;
 
   &__nav {
     @extend .align-extend;
